transactions and position crud buttons

--- a/PortfolioAce/Properties/Resources.resx
+++ b/PortfolioAce/Properties/Resources.resx
@@ -133,8 +133,14 @@
   <data name="icons8_all_securities24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-all-securities24.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="icons8_deleteTrade_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-deleteTrade-24.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="icons8_device_manager_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-device-manager-24.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="icons8_editTrade_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-editTrade-24.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="icons8_exit_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-exit-24.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -153,6 +159,9 @@
   </data>
   <data name="icons8_NAVnotFinalised_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-NAVnotFinalised-24.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="icons8_positionBreakdown_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-positionBreakdown-24.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="icons8_services_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-services-24.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
