--- a/PortfolioAce/Properties/Resources.resx
+++ b/PortfolioAce/Properties/Resources.resx
@@ -214,9 +214,6 @@
   <data name="Stocktwits_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Stocktwits-logo.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="generic_avatar_placeholder" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\generic_avatar_placeholder.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="icons8_communication_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-communication-24.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -246,5 +243,8 @@
   </data>
   <data name="portfolioace_splash_screen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\portfolioace_splash_screen.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="generic_avatar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\generic_avatar.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
